# UNICORN-2020

./: .gitignore  README.md  generate_doc.sh
am_driver_safe/src/: automower_safe.cpp
docs/: QuickStart.md
docs/doc/: manifest.yaml
gazebo_animatedbox/: animated_box.cc
gazebo_tutorial/: animated_box.world
local_planner/: CMakeLists.txt  Manual for local_planner  local_planner_plugin.xml  package.xml
local_planner/doc/: manifest.yaml
local_planner/include/: local_planner.h
local_planner/src/: local_planner.cpp  local_planner_old.cpp
object_coordinates/: CMakeLists.txt
object_coordinates/src/: .object_coordinates_node.cpp.swo  .object_coordinates_node.cpp.swp  object_coordinates_node.cpp
object_detection/src/: movement_compensation_node.cpp
object_tracking/: readme
object_tracking/object_coordinates/: CMakeLists.txt  package.xml
object_tracking/object_coordinates/src/: object_coordinates_node.cpp
object_tracking/tf_filter/: CMakeLists.txt  package.xml
object_tracking/tf_filter/src/: tf_filter_node.cpp
object_tracking/vector_creation/: CMakeLists.txt  package.xml
object_tracking/vector_creation/msg/: vectors.msg
object_tracking/vector_creation/src/: vector_creation_node.cpp
pepperl_fuchs_r2000/launch/: .r2000Lidar.launch.swp  gui_example.launch  r2000Lidar.launch
pepperl_fuchs_r2000/rviz/: test.rviz
ros_dwm1000/launch/: .tf.launch.swm  .tf.launch.swn  .tf.launch.swp  localize.launch  tf.launch
ros_dwm1000/scripts/: localize.py  serialtest.py
rplidar_ros/launch/: rplidar.launch
rplidar_ros/rviz/: rplidar.rviz
rplidar_ros/src/: node.cpp
tf_filter/: CMakeLists.txt
tf_filter/src/: tf_filter_node.cpp
thetastar_planner/: CMakeLists.txt  bgp_plugin.xml  package.xml
thetastar_planner/include/thetastar_planner/: MinSearchHeap.h  ThetaPath.h  ThetaStar4Grid.h  thetastar_planner copy.h  thetastar_planner.h  thetastar_planner_win.h  types.h
thetastar_planner/src/: MinSearchHeap.cpp  PathPlanning_win.cpp  ThetaPath.cpp  ThetaStar4Grid (copy).cpp  ThetaStar4Grid.cpp  thetastar_planner copy.cpp  thetastar_planner.cpp  thetastar_planner_win.cpp  types.cpp
tracking_layers/: CMakeLists.txt  costmap_plugins.xml  package.xml
tracking_layers/cfg/: VelocityPlugin.cfg
tracking_layers/src/: velocity_layer.cpp
tracking_lidar/: CMakeLists.txt
tracking_lidar/src/: tracking_lidar.cpp  tracking_lidar.h
udev-rule/: 81-charlie.rules
unicorn/: .package.xml.swo  CMakeLists.txt  README.md  package.xml
unicorn/config/: .ekf_odom_simple_am_driver.yaml.swp  costmap_common_params.yaml  costmap_common_params_orbbec.yaml  costmap_common_params_zed.yaml  default.rviz  ekf_odom.yaml  ekf_odom_simple.yaml  ekf_odom_simple_am_driver.yaml  frames.gv  global_costmap_params.yaml  global_costmap_params_peter.yaml  local_costmap_params.yaml  local_costmap_params_peter.yaml  sim_voxel_filter_y.yaml  ukf_global.yaml  ukf_local.yaml  ukf_template (copy).yaml  ukf_template.yaml  ukf_template_sim.yaml  ukf_template_sim_peter.yaml  voxel_filter_y.yaml  voxel_filter_z.yaml
unicorn/doc/: manifest.yaml
unicorn/launch/: .main.launch.swp  .main_2019.launch.swp  flow_field_sim.launch  main.launch  main_2019.launch  main_2020.launch  main_alter.launch  main_zed.launch  move_base.launch  move_base_params_peter.yaml  move_base_peter.xml  navigation.launch  object_tracking.launch  peter_2019.launch  rviz.launch  simulator_2020.launch  slam.launch  teleop.launch  unicorn_GPS_to_UWB.launch  unicorn_gazebo.launch  unicorn_sim.launch  unicorn_sim_flow_field.launch  unicorn_sim_flow_field_peter.launch
unicorn/msg/: command.msg  masterMessage.msg
unicorn/scripts/: Install_ROS_Kinetic.sh  Install_ROS_Libraries.sh  Set_Up_ROS_Kinetic.sh  bumperROS.ino  record_sensor_data.sh
unicorn/src/: .lifting_state.cpp.swp  .reversing_state.cpp.swp  .unicorn_statemachine.cpp.swk  .unicorn_statemachine.cpp.swl  .unicorn_statemachine.cpp.swm  .unicorn_statemachine.cpp.swn  .unicorn_statemachine.cpp.swo  .unicorn_statemachine.cpp.swp  aligning_state.cpp  am_unicorn_interface.cpp  idle_state.cpp  laser_scan_filter.cpp  lifting_state.cpp  navigating_state.cpp  odometry_transform.cpp  pid_controller.cpp  range_sensor_driver.cpp  refuse_bin.cpp  reversing_state.cpp  state_factory.cpp  state_machine.cpp  unicorn_statemachine.cpp
unicorn/srv/: CharlieCmd.srv
unicorn/test/: test_unicorn.cpp
unicorn_am_setup/: CMakeLists.txt  package.xml
unicorn_am_setup/src/: unicorn_am_setup_node.cpp
unicorn_description/: CMakeLists.txt  README.md  package.xml
unicorn_description/config/: base_local_planner_params.yaml  base_local_planner_teb.yaml  (+6 more)
unicorn_docking/: CMakeLists.txt  README.md  package.xml
unicorn_hrp_interface/: CMakeLists.txt  README.md  package.xml
unicorn_intention/: CMakeLists.txt  README.md  package.xml
unicorn_joy/: CMakeLists.txt  README.md  package.xml
unicorn_localization/: CMakeLists.txt  README.md  package.xml
unicorn_multi/: CMakeLists.txt  package.xml
unicorn_multi/launch/: amcl.launch  move_base.launch  multi_robot.launch  navigation.launch  unicorn.rviz  unicorn_gazebo.launch
unicorn_multi/params/: amcl.yaml  amcl_sim.yaml  gmapping_default.yaml  gmapping_sim.yaml  gmapping_sim_cam.yaml
unicorn_multi/worlds/: gmap_map.yaml  hospital_map_3.yaml  mdh_corridor.yaml
unicorn_navigation/: CMakeLists.txt  README.md  package.xml
unicorn_roborio_bridge/: CMakeLists.txt  README.md  package.xml
unicorn_scan_odometry/: CMakeLists.txt  README.md  package.xml
unicorn_simulator/: CMakeLists.txt  README.md  package.xml
unicorn_slam/: CMakeLists.txt  README.md  package.xml
unicorn_state_machine/: CMakeLists.txt  README.md  package.xml
unicorn_tracking/: CMakeLists.txt  README.md  package.xml
vector_creation/: CMakeLists.txt  package.xml
vector_creation/include/: movement_compensation.hpp  movement_compensation_node.hpp
vector_creation/msg/: vector.msg
vector_creation/src/: movement_compensation.cpp  vector_creation_node.cpp
zed-ros-wrapper/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  setup_custom_pythonpath.sh
(+5087 files in other folders)
