<package>
    <name>thetastar_planner</name>
    <version>0.0.1</version>
    <description>

    This planner attempts to find path to the goal with light_of_sight check.

    </description>
    <author>Lan Anh Trinh</author>
    <maintainer email="lana2512@gmail.com">Lan Anh Trinh</maintainer>
    <license>BSD</license>
    <url>http://wiki.ros.org/carrot_planner</url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>base_local_planner</build_depend>
    <build_depend>tf</build_depend>
    <!--<build_depend>angles</build_depend>-->
    <build_depend>eigen</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>base_local_planner</run_depend>
    <run_depend>tf</run_depend>
    <!--<run_depend>angles</run_depend>-->
    <run_depend>eigen</run_depend>

    <export>
        <nav_core plugin="${prefix}/bgp_plugin.xml" />
    </export>

</package>


