<package>
  <name>unicorn_multi</name>
  <version>1.0.0</version>
  <description>unicorn_multi</description>
  <maintainer email="anh.lan@mdh.se">Lan Anh Trinh</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/collvoid_turtlebot</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Lan Anh Trinh</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

  <export>

  </export>
</package>
