<package format="2">
  <name>vector_creation</name>
  <version>2.7.0</version>
  <description>
    This package will create a vector from 2 locations.
  </description>

  <maintainer email="jnn13008@student.mdh.se">STEREOLABS</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

</package>
